[workspace]
members = [
    "rlink",
    "rlink-derive",

    "rlink-connectors/clickhouse-connector",
    "rlink-connectors/kafka-connector",
    "rlink-connectors/elasticsearch-connector",
    "rlink-connectors/files-connector",

    "rlink-deployment/rlink-standalone",
    "rlink-deployment/rlink-kubernetes",

    "example/example-utils",
    "example/example-simple",
    "example/example-connect",
    "example/example-files",
]
