[workspace]
members = [
    "rlink",
    "rlink-derive",

    "rlink-connectors/connector-clickhouse",
    "rlink-connectors/connector-kafka",
    "rlink-connectors/connector-elasticsearch",
    "rlink-connectors/connector-files",

    "rlink-deployment/rlink-standalone",
    "rlink-deployment/rlink-kubernetes",

    "example/example-utils",
    "example/example-simple",
    "example/example-connect",
    "example/example-files",
]
