[workspace]
members = [
    "rlink",
    "rlink-core",
    "rlink-runtime",
    "rlink-derive",

    "rlink-connectors/connector-clickhouse",
    "rlink-connectors/connector-kafka",
    "rlink-connectors/connector-elasticsearch",

    "rlink-deployment/rlink-standalone",
    "rlink-deployment/rlink-kubernetes",

    "example/example-utils",
    "example/example-simple",
    "example/example-connect",
    "example/example-kafka",
]

[workspace.package]
version = "0.6.16"
authors = ["yorkart <wangyue11.4@163.com>"]
edition = "2021"
license = "MIT/Apache-2.0"