[package]
name = "rlink"
version = "0.6.16"
authors = ["yorkart <wangyue11.4@163.com>"]
edition = "2021"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink"]
repository = "https://github.com/rlink-rs/rlink-rs.git"
license = "MIT OR Apache-2.0"

[lib]
name = "rlink"

[dependencies]
serbuffer = "1.3"

log = "0.4"
log4rs = "1.0"

num_cpus = "1.13"
thread-id = "4"
sysinfo = "0.29"
chrono = "0.4"
lazy_static = "1.4.0"
async-trait = "0.1"
backtrace = "0.3"
anyhow = "1.0"
thiserror = "1.0"
daggy = "0.8.0"
hostname = "0.3"
dns-lookup = "2.0"
atomic_enum = "0.2"
#enum_dispatch = "0.3"

# randomness
rand = "0.8"

# serialization
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"

# hash code
murmur3 = "0.5"
dashmap = "5.4.0"
crossbeam = "0.8"

metrics = "0.21"
metrics-macros = "0.7"
metrics-util = "0.15"
metrics-exporter-prometheus = "0.12"

# net
bytes = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
hyper = { version = "0.14", features = ["client", "server", "http1", "tcp"] }

# storage
mysql_async = "0.32"

# kubernetes
kube = { version = "0.85" }
kube-runtime = { version = "0.85" }
k8s-openapi = { version = "0.19", features = ["v1_26"]}

[dev-dependencies]
uuid = { version = "1.1", features = ["serde", "v4"] }