[package]
name = "rlink-example-kafka"
version = "0.6.0"
authors = ["rlink-rs <rlink_rs@163.com>"]
edition = "2021"

[dependencies.rlink]
version = "0.6"
path = "../../rlink"

[dependencies.rlink-derive]
version = "0.3"
path = "../../rlink-derive"

[dependencies.rlink-connector-kafka]
version = "0.6"
path = "../../rlink-connectors/connector-kafka"

[dependencies.rlink-example-utils]
version = "0.6"
path = "../example-utils"

[dependencies]
serbuffer = "1.3"

log = "0.4.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0"
uuid ={version="0.8",features=["v4"]}

async-trait = "0.1"
tokio = "1"

webhdfs="0.3"

# kafka
rdkafka = { version = "0.28.0", features = ["cmake-build"] }

[build-dependencies]
serbuffer-gen = "1.3"