[package]
name = "rlink-example-kafka"
version = "0.6.0"
authors = ["yorkart <wangyue11.4@163.com>"]
edition = "2021"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink", "spark"]
repository = "https://github.com/rlink-rs/rlink-rs.git"
license = "MIT OR Apache-2.0"

[dependencies.rlink]
version = "0.6"
path = "../../rlink"

[dependencies.rlink-derive]
version = "0.3"
path = "../../rlink-derive"

[dependencies.rlink-connector-kafka]
version = "0.6"
path = "../../rlink-connectors/connector-kafka"

[dependencies.rlink-example-utils]
version = "0.6"
path = "../example-utils"

[dependencies]
serbuffer = "1.3"

log = "0.4.8"
anyhow = "1.0"
uuid ={version= "1.1",features=["v4"]}

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

async-trait = "0.1"
tokio = "1"

[build-dependencies]
serbuffer-gen = "1.3"