[package]
name = "rlink-example-simple"
version = "0.6.0"
authors = ["yorkart <wangyue11.4@163.com>"]
edition = "2021"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink", "spark"]
repository = "https://github.com/rlink-rs/rlink-rs.git"
license = "MIT/Apache-2.0"

[dependencies.rlink]
version = "0.6"
path = "../../rlink"

[dependencies.rlink-derive]
version = "0.3"
path = "../../rlink-derive"

[dependencies.rlink-example-utils]
version = "0.6"
path = "../example-utils"

[dependencies]
serbuffer = "1.3"

log = "0.4.8"
anyhow = "1.0"
rand = "0.8"
chrono = "0.4"

async-trait = "0.1"
tokio = "1"

[build-dependencies]
serbuffer-gen = "1.3"
