[package]
name = "rlink-example-utils"
version = "0.2.2"
authors = ["yorkart <wangyue11.4@163.com>"]
edition = "2018"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink", "spark"]
repository = "https://github.com/rlink-rs/rlink-rs.git"
license = "MIT/Apache-2.0"

[lib]
name = "rlink_example_utils"

[dependencies.rlink]
version = "0.2.2"
path = "../../rlink"

[dependencies.rlink-derive]
version = "0.2.2"
path = "../../rlink-derive"

[dependencies]
serbuffer = "1.1"

log = "0.4.8"
anyhow = "1.0"
rand = "0.7"
chrono="0.4"

[build-dependencies]
serbuffer-gen = "1.0"
