[package]
name = "rlink-example-utils"
version = "0.6.0"
authors = ["yorkart <wangyue11.4@163.com>"]
edition = "2021"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink", "spark"]
repository = "https://github.com/rlink-rs/rlink-rs.git"
license = "MIT OR Apache-2.0"

[lib]
name = "rlink_example_utils"

[dependencies.rlink]
version = "0.6"
path = "../../rlink"

[dependencies.rlink-derive]
version = "0.3"
path = "../../rlink-derive"

[dependencies]
serbuffer = "1.3"

log = "0.4.8"
anyhow = "1.0"
rand = "0.8"
chrono = "0.4"

futures = "0.3"
async-trait = "0.1"
tokio = { version = "1" }
tokio-stream = {version = "0.1", features = ["time"]}

[build-dependencies]
serbuffer-gen = "1.3"
