[package]
name = "rlink-showcase"
version = "0.2.2-alpha.2"
authors = ["yorkart <wangyue11.4@163.com>>"]
edition = "2018"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink", "spark"]
repository = "https://github.com/rlink-rs/rlink-rs.git"
license = "MIT/Apache-2.0"

[dependencies]
rlink = {path = "../../rlink", version = "0.2.2-alpha.2"}
rlink-derive = {path = "../../rlink-derive", version = "0.2.2-alpha.2"}
rlink-kafka-connector= {path = "../../rlink-connectors/kafka-connector", version = "0.2.2-alpha.2"}

serbuffer = "1.0"

log = "0.4.8"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

rand = "0.7"
chrono="0.4"

## net
tokio = { version = "0.2", features = ["full"] }

[build-dependencies]
serbuffer-gen = "1.0"
