[package]
name = "rlink-clickhouse-connector"
version = "0.2.0-alpha.5"
authors = ["yorkart <wangyue11.4@163.com>>"]
edition = "2018"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink", "spark", "clickhouse"]
repository = "https://github.com/rlink-rs/rlink-rs.git"
license = "MIT/Apache-2.0"

[lib]
name = "rlink_clickhouse_connector"

[dependencies]
rlink = {path = "../../rlink", version = "0.2.0-alpha.5"}
rlink-derive = {path = "../../rlink-derive", version = "0.2.0-alpha.5"}

log = "0.4"
anyhow = "1.0.31"
thiserror = "1.0.20"

chrono="0.4"
chrono-tz = "0.5"

# serde
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

futures = "0.3"

tokio = { version = "0.2", features = ["full"] }

clickhouse-rs = { git = "https://github.com/suharev7/clickhouse-rs", rev = "a1d2b29d0f01de2b3d9183ae95a61c6c72ffb8c4" }
