[package]
name = "rlink-connector-elasticsearch"
version = "0.6.2"
authors = ["yorkart <wangyue11.4@163.com>"]
edition = "2021"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink", "elasticsearch"]
repository = "https://github.com/rlink-rs/rlink-rs.git"
license = "MIT/Apache-2.0"

[lib]
name = "rlink_connector_elasticsearch"

[dependencies.rlink]
version = "0.6"
path = "../../rlink"

[dependencies.rlink-derive]
version = "0.3"
path = "../../rlink-derive"

[dependencies]
log = "0.4"
anyhow = "1.0.31"
thiserror = "1.0.20"

# serde
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

async-trait = "0.1"
tokio = "1"

elasticsearch = "8.5.0-alpha.1"
