[package]
name = "rlink-connector-kafka"
version = "0.6.6"
authors = ["yorkart <wangyue11.4@163.com>"]
edition = "2021"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink", "kafka"]
repository = "https://github.com/rlink-rs/rlink-rs.git"
license = "MIT/Apache-2.0"

[lib]
name = "rlink_connector_kafka"

[dependencies.rlink]
version = "0.6"
path = "../../rlink"

[dependencies.rlink-derive]
version = "0.3"
path = "../../rlink-derive"

[dependencies]
serbuffer = "1.3"

log = "0.4"
anyhow = "1.0"

# serde
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

futures = "0.3"
async-trait = "0.1"
tokio = { version = "1" }

# kafka
rdkafka = { version = "0.31", features = ["cmake-build"] }

[dev-dependencies]
tokio = { version = "1", features = ["time", "rt-multi-thread"] }

[build-dependencies]
serbuffer-gen = "1.3"
