[package]
name = "rlink-elasticsearch-connector"
version = "0.2.1-alpha.1"
authors = ["yorkart <wangyue11.4@163.com>>"]
edition = "2018"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink", "spark", "elasticsearch"]
repository = "https://github.com/rlink-rs/rlink-rs.git"
license = "MIT/Apache-2.0"

[lib]
name = "rlink_elasticsearch_connector"

[dependencies]
rlink = {path = "../../rlink", version = "0.2.1-alpha.1"}
rlink-derive = {path = "../../rlink-derive", version = "0.2.1-alpha.1"}

log = "0.4"
anyhow = "1.0.31"
thiserror = "1.0.20"

# serde
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

futures = "0.3"

tokio = { version = "0.2", features = ["full"] }

elasticsearch = "7.10.0-alpha.1"
