[package]
name = "rlink-elasticsearch-connector"
version = "0.2.3-alpha.5"
authors = ["yorkart <wangyue11.4@163.com>"]
edition = "2018"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink", "spark", "elasticsearch"]
repository = "https://github.com/rlink-rs/rlink-rs.git"
license = "MIT/Apache-2.0"

[lib]
name = "rlink_elasticsearch_connector"

[dependencies.rlink]
version = "0.2.3-alpha.5"
path = "../../rlink"

[dependencies.rlink-derive]
version = "0.2.3-alpha.5"
path = "../../rlink-derive"

[dependencies]
log = "0.4"
anyhow = "1.0.31"
thiserror = "1.0.20"

# serde
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

elasticsearch = "7.11.0-alpha.1"
