[package]
name = "rlink-files-connector"
version = "0.2.3"
authors = ["yorkart <wangyue11.4@163.com>"]
edition = "2018"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink", "hdfs"]
repository = "https://github.com/rlink-rs/rlink-rs.git"
license = "MIT/Apache-2.0"

[lib]
name = "rlink_files_connector"

[dependencies.rlink]
version = "0.2.3"

[dependencies.rlink-derive]
version = "0.2.3"

[dependencies]
log = "0.4"
anyhow = "1.0"

#webhdfs="0.3"
parquet = "3.0"
