[package]
name = "rlink-kafka-connector"
version = "0.2.0-alpha.2"
authors = ["yorkart <wangyue11.4@163.com>>"]
edition = "2018"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink", "spark", "kafka"]
repository = "https://github.com/yorkart/rlink.git"
license = "MIT/Apache-2.0"

[lib]
name = "rlink_kafka_connector"

[dependencies]
rlink = {path = "../../rlink", version = "0.2.0-alpha.2"}
rlink-derive = {path = "../../rlink-derive", version = "0.2.0-alpha.2"}

log = "0.4"
lazy_static = "1.4.0"

# serde
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

futures = "0.3"

tokio = { version = "0.2", features = ["full"] }

# kafka
rdkafka = { version = "0.24", features = ["cmake-build"] }
