[package]
name = "rlink-kafka-connector"
version = "0.2.1-alpha.3"
authors = ["yorkart <wangyue11.4@163.com>>"]
edition = "2018"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink", "spark", "kafka"]
repository = "https://github.com/rlink-rs/rlink-rs.git"
license = "MIT/Apache-2.0"

[lib]
name = "rlink_kafka_connector"

[dependencies]
rlink = {path = "../../rlink", version = "0.2.1-alpha.3"}
rlink-derive = {path = "../../rlink-derive", version = "0.2.1-alpha.3"}

log = "0.4"
lazy_static = "1.4.0"
anyhow = "1.0"
dashmap = "3.11"

# serde
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

futures = "0.3"

tokio = { version = "0.2", features = ["full"] }

# kafka
rdkafka = { version = "0.24", features = ["cmake-build"] }
