[package]
name = "rlink-kafka-connector"
version = "0.2.3"
authors = ["yorkart <wangyue11.4@163.com>"]
edition = "2018"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink", "kafka"]
repository = "https://github.com/rlink-rs/rlink-rs.git"
license = "MIT/Apache-2.0"

[lib]
name = "rlink_kafka_connector"

[dependencies.rlink]
version = "0.2.3"
path = "../../rlink"

[dependencies.rlink-derive]
version = "0.2.3"
path = "../../rlink-derive"

[dependencies]
log = "0.4"
lazy_static = "1.4.0"
anyhow = "1.0"
dashmap = "4.0"

# serde
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

futures = "0.3"

# kafka
rdkafka = { version = "0.25", features = ["cmake-build"] }

[dev-dependencies]
tokio = { version = "1", features = ["time", "rt-multi-thread"] }
