[package]
name = "rlink-kubernetes"
version = "0.1.0"
authors = ["youcongxiang <ycx07807@ly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies.rlink]
version = "0.2.2"
path = "../../rlink"

[dependencies]

kube = "0.50.1"
kube-runtime = "0.50.1"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"

anyhow = "1.0.37"
tokio = { version = "1.0.1", features = ["full"] }
tokio-util = "0.6.0"

rand = "0.8"

log = "0.4"
log4rs = "1.0"

