[package]
name = "rlink-kubernetes"
version = "0.1.0"
authors = ["rlink-rs <rlink-rs@163.com>"]
edition = "2018"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink", "kubernetes"]
repository = "https://github.com/rlink-rs/rlink-rs.git"
license = "MIT/Apache-2.0"

[dependencies.rlink]
version = "0.3.0"
path = "../../rlink"

[dependencies]
log = "0.4"
log4rs = "1.0"
rand = "0.8"
anyhow = "1.0.37"

serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"

tokio = { version = "1.0.1", features = ["full"] }
tokio-util = "0.6.0"

kube = "0.52"
kube-runtime = "0.52"
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"] }
