[package]
name = "rlink-kubernetes"
version = "0.6.0"
authors = ["rlink-rs <rlink-rs@163.com>"]
edition = "2021"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink", "kubernetes"]
repository = "https://github.com/rlink-rs/rlink-rs.git"
license = "MIT OR Apache-2.0"

[dependencies.rlink]
version = "0.6"
path = "../../rlink"

[dependencies]
log = "0.4"
log4rs = "1.0"
rand = "0.8"
anyhow = "1.0.37"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

kube = "0.83"
kube-runtime = "0.83"
k8s-openapi = { version = "0.18", features = ["v1_26"]}
