[package]
name = "rlink-standalone"
version = "0.2.2-alpha.2"
authors = ["yorkart <wangyue11.4@163.com>>"]
edition = "2018"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink", "spark", "standalone"]
repository = "https://github.com/rlink-rs/rlink-rs.git"
license = "MIT/Apache-2.0"

[dependencies.rlink]
version = "0.2.2-alpha.2"
path = "../../rlink"

[dependencies]
chrono="0.4"
lazy_static = "1.4.0"
anyhow = "1.0"

log = "0.4"
log4rs = "0.11"

# randomness
rand = "0.7"

# serialization
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"

crossbeam = "0.7.3"

# net
bytes = "0.5"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

actix-rt = "1.1"
actix-web = "3.1"
actix-multipart = "0.3"
actix-files = "0.4"
awc = "2.0"

sanitize-filename = "0.2"

uuid = { version = "0.8", features = ["serde", "v4"] }
