[package]
name = "rlink-standalone"
version = "0.6.0"
authors = ["yorkart <wangyue11.4@163.com>"]
edition = "2021"
description = "High performance Stream Processing Framework"
keywords = ["stream", "window", "flink", "spark", "standalone"]
repository = "https://github.com/rlink-rs/rlink-rs.git"
license = "MIT OR Apache-2.0"

[dependencies.rlink]
version = "0.6"
path = "../../rlink"

[dependencies]
chrono = "0.4"
lazy_static = "1.4.0"
anyhow = "1.0"

log = "0.4"
log4rs = "1.0"

# randomness
rand = "0.8"

# serialization
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"

crossbeam = "0.8"

# net
bytes = "1"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

actix-rt = "2.8"
actix-web = "4.3"
actix-multipart = "0.6"
actix-files = "0.6"
awc = "3.1"

sanitize-filename = "0.4"

uuid = { version = "1.1", features = ["serde", "v4"] }
